# lh-pldi19-benchmarks

./: LICENSE  README.md  lh_pldi19_benchmarks.cabal
data/lib/: Assert.lhs  Final.lhs  KMeans.lhs  List.lhs  MapReduce.lhs
src/: Main.hs
